Standardized icon-plus-text & fixed alignment issues

--- a/src/styles/content-sections.sass
+++ b/src/styles/content-sections.sass
@@ -139,10 +139,21 @@
     background: unset
 
 .icon-plus-text
-  display: flex
+  display: grid
+  grid-template-rows: 1fr
+  grid-template-columns: minmax(20px, 0.65fr) 19fr
+  grid-column-gap: 4px
+  grid-row-gap: 15px
   align-items: center
+  margin: 0 0 0.25em
   font-size: 0.85rem
-  margin: 0.15em 0
+  //border: 1px solid red
+  .text,
+  .icon
+    //border: 1px solid blue
+    margin: 0
+  //.text
+  //  margin-bottom: 1em
 
 @keyframes poker-logo-slideshow
   0%
@@ -412,12 +423,14 @@
     .cert-title
       font-size: 1.25rem
       font-weight: 500
+      text-align: center
       line-height: 1.3
       color: $color-primary-darker
-      margin: 0 0 0.5em
+      margin: 0 0 0.75em
     .cert-content
       display: grid
       grid-template: 1fr / 25% 75%
+      grid-column-gap: 10px
       //border: 1px solid black
       .logo-container
         //margin: 0 1em 0 0
@@ -434,6 +447,7 @@
         display: flex
         flex-direction: column
         justify-content: center
+
 
 @media (min-width: 500px)
   .icon-plus-text
@@ -453,10 +467,10 @@
       grid-gap: 0.5em
       .cert
         margin: 0
-        //padding: 1em
+        padding: 1em
         display: grid
         grid-template: 1fr / 1fr
-        grid-gap: 0
+        grid-gap: 1em 0
         .cert-title
           margin: 0
           text-align: center
